--- a/notebooks/testdefinitivo.ipynb
+++ b/notebooks/testdefinitivo.ipynb
@@ -16,23 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/paula/miniconda3/envs/zorzim/lib/python3.9/site-packages/libpysal/cg/alpha_shapes.py:39: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "  def nb_dist(x, y):\n",
-      "/home/paula/miniconda3/envs/zorzim/lib/python3.9/site-packages/libpysal/cg/alpha_shapes.py:165: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "  def get_faces(triangle):\n",
-      "/home/paula/miniconda3/envs/zorzim/lib/python3.9/site-packages/libpysal/cg/alpha_shapes.py:199: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "  def build_faces(faces, triangles_is, num_triangles, num_faces_single):\n",
-      "/home/paula/miniconda3/envs/zorzim/lib/python3.9/site-packages/libpysal/cg/alpha_shapes.py:261: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
-      "  def nb_mask_faces(mask, faces):\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -118,6 +104,47 @@
     "plt.xlabel('Longitud')\n",
     "plt.ylabel('Latitud')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "File does not exist: Found: /home/paula/zorzin/data/external/OSM/valparaiso.osm.pbf",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m osm_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/paula/zorzin/data/external/OSM/valparaiso.osm.pbf\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Carga los datos usando pyrosm\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m osm \u001b[38;5;241m=\u001b[39m \u001b[43mOSM\u001b[49m\u001b[43m(\u001b[49m\u001b[43mosm_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Ejemplo: Obtener información de carreteras\u001b[39;00m\n\u001b[1;32m     11\u001b[0m roads \u001b[38;5;241m=\u001b[39m osm\u001b[38;5;241m.\u001b[39mget_data_by_custom_criteria(\n\u001b[1;32m     12\u001b[0m     custom_filter\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhighway\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mTrue\u001b[39;00m},\n\u001b[1;32m     13\u001b[0m     filter_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkeep\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/envs/zorzim/lib/python3.9/site-packages/pyrosm/pyrosm.py:62\u001b[0m, in \u001b[0;36mOSM.__init__\u001b[0;34m(self, filepath, bounding_box)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, filepath, bounding_box\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m     61\u001b[0m     \u001b[38;5;66;03m# Check input file\u001b[39;00m\n\u001b[0;32m---> 62\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfilepath \u001b[38;5;241m=\u001b[39m \u001b[43mvalidate_input_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;66;03m# Check if file contains history\u001b[39;00m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_osh_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/zorzim/lib/python3.9/site-packages/pyrosm/utils/__init__.py:146\u001b[0m, in \u001b[0;36mvalidate_input_file\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m    141\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    142\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput data should be in Protobuf format (*.osm.pbf). \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    143\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    144\u001b[0m     )\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(filepath):\n\u001b[0;32m--> 146\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile does not exist: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilepath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    147\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m filepath\n",
+      "\u001b[0;31mValueError\u001b[0m: File does not exist: Found: /home/paula/zorzin/data/external/OSM/valparaiso.osm.pbf"
+     ]
+    }
+   ],
+   "source": [
+    "from pyrosm import OSM\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Ruta del archivo OSM\n",
+    "osm_path = \"/home/paula/zorzin/data/external/OSM/valparaiso.osm.pbf\"\n",
+    "\n",
+    "# Carga los datos usando pyrosm\n",
+    "osm = OSM(osm_path)\n",
+    "\n",
+    "# Ejemplo: Obtener información de carreteras\n",
+    "roads = osm.get_data_by_custom_criteria(\n",
+    "    custom_filter={\"highway\": True},\n",
+    "    filter_type=\"keep\"\n",
+    ")\n",
+    "\n",
+    "# Visualizar las carreteras\n",
+    "roads.plot(figsize=(10, 10), alpha=0.7, edgecolor=\"black\")\n",
+    "plt.title(\"Carreteras del archivo OSM\")\n",
+    "plt.show()\n"
    ]
   },
   {
